feat: order entity

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,25 @@
 quarkus:
   http:
     port: 9092
+  datasource:
+    jdbc:
+      url: jdbc:h2:mem:default
+  hibernate-orm:
+    database:
+      generation: drop-and-create
+
 mp:
   messaging:
     incoming:
       requests:
         connector: smallrye-rabbitmq
         queue:
-          name: quote-requests
-    outgoing:
-      quotes:
-        connector: smallrye-rabbitmq
+          name: order-requests
+        exchange:
+          name: order
+#    outgoing:
+#      order:
+#        connector: smallrye-rabbitmq
+#        exchange:
+#          name: order
+
